--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,18 @@
   <artifactId>MavenUI</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <build>
+    <finalName>MavenUI</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>tomcat-maven-plugin</artifactId>
+        <version>1.0-beta-1</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
